--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,6 +6,7 @@ html{
 }
 body{
     margin: 0;
+    background-color: $colour-gray;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px){    
