--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,6 +4,7 @@
     padding-bottom: 20px;
     h4{
         color: white;
+        margin-bottom: 10px;
     }
     a{
         text-decoration: none;
