--- a/sass/layouts/_nav.scss
+++ b/sass/layouts/_nav.scss
@@ -1,5 +1,6 @@
 .nav{
     padding: 10px;
+    background-color: white;
 }
 
 .fonct__button{
